--- a/src/main/webapp/web_admin/analyseSearch.html
+++ b/src/main/webapp/web_admin/analyseSearch.html
@@ -26,7 +26,7 @@
         function getRecordCountCallback(json)
         {
             if(json.RecordCount==0) alert("用户搜索记录等于0");
-            $("#pagination").pagination(json.getUserSearchCount,    //分布总数量，必须参数
+            $("#pagination").pagination(json.RecordCount,    //分布总数量，必须参数
                 {
                     callback: PageCallback,  //PageCallback() 为翻页调用次函数。
                     prev_text: "« 上一页",
