--- a/src/main/webapp/web_admin/userListBycharts.html
+++ b/src/main/webapp/web_admin/userListBycharts.html
@@ -28,15 +28,14 @@
 			</div>
 		</div>
 		<div class="list_toolbar" style="height: 45px;">
-			<div class="toolbar_search" style="width: 700px; ">
+			<div class="toolbar_search" style="width: 450px; ">
 				<label style=" font-size: 14px; font-weight: 400;float:left;margin-top: 8px;margin-right: 6px;">查询日期</label>
 				<input type="date"
 					   style="margin-left: 0px;float: left;height: 35px; font-size: 14px;"
-					   id="startDate"
-				>
+					   id="startDate">
 				<span style="float: left;font-size: 20px;">-</span>
 				<input type="date" style="margin-left: 0px;float: left;height: 35px; font-size: 14px; margin-right: 8px!important;"
-					   id="endDate"	>
+					   id="endDate"	 >
 			</div>
 
 			<div class="toolbar_button">
@@ -50,7 +49,25 @@
 
 	</div>
 
+	<script>
+        $(document).ready(function () {
+            var time = new Date();
+            var d =  time.getDate() - 7;
+            var day = ("0" + d).slice(-2);
+            console.log(time.getDate())
+            var month = ("0" + (time.getMonth() + 1)).slice(-2);
+            var today = time.getFullYear() + "-" + (month) + "-" + (day);
+            $('#startDate').val(today);
+        })
 
+        $(document).ready(function () {
+            var time = new Date();
+            var day = ("0" + time.getDate()).slice(-2);
+            var month = ("0" + (time.getMonth() + 1)).slice(-2);
+            var today = time.getFullYear() + "-" + (month) + "-" + (day);
+            $('#endDate').val(today);
+        })
+	</script>
 
 	<script type="text/javascript" src="https://cdn.jsdelivr.net/npm/echarts/dist/echarts.min.js"></script>
 	<script type="text/javascript" src="https://cdn.jsdelivr.net/npm/echarts-gl/dist/echarts-gl.min.js"></script>
