--- a/src/main/webapp/web_admin/analyseUserBycharts.html
+++ b/src/main/webapp/web_admin/analyseUserBycharts.html
@@ -166,6 +166,12 @@
                   ]*/
               },
               series: [{
+                  label:{
+                      normal:{
+                          show:true
+                      }
+
+                  },
                   name: '浏览量',
                   type: 'radar',
                   // areaStyle: {normal: {}},
